<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dungeon Manager</string>
    <string name="settings">Settings</string>
    <string name="harm">Harm</string>
    <string name="heal">Heal</string>
    <string name="effect">Add Effect</string>
    <string name="remove_effect">Remove Effect</string>
    <string name="next_turn">Next</string>
    <string name="previous_turn">Previous</string>
    <string name="main_load">Load Game</string>
    <string name="main_new">New Game</string>
    <string name="new_gamename">Name this campaign...</string>
    <string name="pick_creature">Select your creature...</string>
    <string name="pick_effect">Select your effect...</string>
    <string name="load_gamename">Load which campaign...</string>
    <string name="create_creature_title">Create Creature...</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="new_new">New</string>
    <string name="run">Run</string>
    <string name="delete_encounter">Delete Encounter</string>
    <string name="encounter_list_num">Encounter #%s</string>
    <string name="encounter_list_creaturecount">Creatures: %s</string>
    <string name="edit">Edit</string>
    <string name="encounter_title">Encounter Name:</string>
    <string name="encounter_creatures">Creatures</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="copy">Copy</string>
    <string name="creatures_new">New Creature</string>
    <string name="string_new">New</string>
    <string name="reset_combat">Reset the encounter?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="misc_name">Character Name:</string>
    <string name="misc_player_name">Player Name:</string>
    <string name="misc_init">Initiative Modifier:</string>
    <string name="misc_hp">HP:</string>
    <string name="create_creature_take_image">Set Stats Picture</string>
    <string name="picture_choose">Grab picture...</string>
    <string name="close">Close</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="overwrite">overwrite</string>
    <string name="create_creature_overwrite_picture_title">Overwrite?</string>
    <string name="create_creature_overwrite_picture">A picture for this creature exists...\nOverwrite? (cannot be undone)</string>
    <string name="hp_init_need_numbers">HP and Initiative need to be numbers</string>
    <string name="damage_need_numbers">Damage needs to be a number</string>
    <string name="wrong_input">Wrong Input...</string>
    <string name="hp_not_null">HP cannot be empty</string>
    <string name="init_not_null">Initiative cannot be empty</string>
    <string name="name_not_null">Name field cannot be empty.</string>
    <string name="description_not_null">Description field cannot be empty.</string>
    <string name="damage_not_null">Damage field cannot be empty.</string>
    <string name="no_image">Save an image of this creatures stats?</string>
    <string name="no_image_title">No Picture Selected</string>
    <string name="quit_or_back">Close app or go to main menu?</string>
    <string name="main_menu">Main Menu</string>
    <string name="quit_title">Quit?</string>
    <string name="close_app">Close App</string>
    <string name="name_exists_title">Already exists</string>
    <string name="name_exists">That name exists already</string>
    <string name="harm_title">Harm...</string>
    <string name="heal_title">Heal...</string>
    <string name="pick_existing_effect">Existing Effects</string>
    <string name="new_effect">New Effect</string>
    <string name="pick_select_effect">Select Effect</string>
    <string name="effect_name">Name</string>
    <string name="effect_description">Description</string>
    <string name="effects_deals_damage">Deals Damage?</string>
    <string name="trigger_start">Trigger at start of turn</string>
    <string name="trigger_end">Trigger at end of turn</string>
    <string name="turn">Turn:</string>
    <string name="round">Round:</string>

</resources>