<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/combat_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/misc_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/create_creature_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/combat_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/misc_init"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/create_creature_init"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/misc_hp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/create_creature_hp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <Button
            android:id="@+id/create_creature_set_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_creature_take_image" />

    </LinearLayout>

</LinearLayout>
